# SolFarmer

./: Cargo.toml  readme.md
assets/: Resource.xcf  colors.md
assets/images/: Hoe.xcf
assets/tiles/: Core_full.xcf  base_corner.xcf  base_roof.xcf  base_wall.xcf  torch.xcf
src/: game.rs  main.rs  map.rs  menu.rs  music_player.rs  player.rs  spriteanims.rs  the_core.rs
