[package]
name = "SolFarmer"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", features = ["wav"] } #remove the dynamic linking flag to build release version 
rand = "0.8"
bevy_hanabi = "0.10"
bevy_kira_audio = "0.19"
winit = "0.29.0"
image = "0.24"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# for Linux
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

# for Windows
[target.x86_64-pc-windows-msvc]
rustflags = ["-Ctarget-feature=+crt-static"]